--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -9,4 +9,5 @@ OrganizeImports {
   groups = ["re:javax?\\.", "scala.", "re:(cats|fs2)\\.", "htmx4s.", "*"]
   importSelectorsOrder = Ascii
   removeUnused = false
+  targetDialect = Scala3
 }
